--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,16 @@
             "projectName": "kakao-custom",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-FormApplication<form>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.aloha.form.FormApplication",
+            "projectName": "form",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
