바로 로그인

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,16 @@
             "projectName": "form-rememberme",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-FormJointologinApplication<form-jointologin>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.aloha.formjointologin.FormJointologinApplication",
+            "projectName": "form-jointologin",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
